# osm-polygon-selection

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: AFRICA_ROLLOUT.md  AGENT_HANDOFF.md  ARCHITECTURE.md  PERFORMANCE.md  architecture.md  dataset_state.md  whitelist_decisions.md
docs/internal/: AGENT_HANDOFF.md
scripts/: __init__.py  build_dataset.py  build_whitelist.py  classify.py  complete_pipeline.sh  extract.py  make_split.py  organize_dataset.py  process_country_regions.py  render_map_screenshot.py  run_country.sh  run_europe.py  sample_for_map.py  split_parquets.py  stage0_extract.py  stage1_build_whitelist.py  stage2_filter.py  stage3_classify.py  upload_to_hf.py  visualize.py
scripts/dataset/: __init__.py  build_dataset.py  make_split.py  organize_dataset.py  sample_for_map.py  split_parquets.py
scripts/operations/: complete_pipeline.sh  process_country_regions.py  render_map_screenshot.py  run_country.sh  run_europe.py
scripts/pipeline/: __init__.py  stage0_extract.py  stage1_build_whitelist.py  stage2_filter.py  stage3_classify.py
scripts/preview/: __init__.py  visualize.py
scripts/publishing/: __init__.py  upload_to_hf.py
src/osm_polygon_selection/: __init__.py  classify.py  country_notes.py  country_table.py  dataset_layout.py  extract.py  extract_status.py  filter_by_whitelist.py  git_meta.py  jsonl_utils.py  paths.py  pbf_meta.py  pyarrow_compat.py  (+8 more)
tests/: test_build_dataset.py  test_build_dataset_characterization.py  test_build_dataset_readme.py  test_build_dataset_runtime_config.py  test_build_dataset_uses_streaming.py  test_classify.py  test_country_table.py  test_dataset_build_combined.py  test_dataset_build_readme.py  test_dataset_layout.py  test_filter_by_whitelist.py  test_geometry_utils.py  test_git_meta.py  test_jsonl_utils.py  test_make_split.py  test_organize_dataset_characterization.py  test_paths.py  test_pbf_meta.py  test_readme_render.py  test_regional_metadata_in_sync.py  test_sample_for_map.py  test_sample_for_map_characterization.py  test_sample_table.py  test_schema_defs.py  test_split_parquets.py  test_split_parquets_cli.py  test_streaming_writer.py  test_visualize.py  test_whitelist.py  test_whitelist_io.py
(+211 files in other folders)
