[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-polygon-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "osmium>=4.3.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osm_polygon_selection"]
