[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-polygon-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "huggingface-hub>=1.21.0",
    "openpyxl>=3.1.5",
    "osmium>=4.3.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osm_polygon_selection"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]


[tool.coverage.run]
source = ["src/osm_polygon_selection"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[dependency-groups]
dev = [
    "coverage>=7.5.0",
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "types-shapely>=2.1.0.20260603",
]
